# Muse-Qml-App-Template

./: .gitignore  CMakeLists.txt  README.md  SetupConfigure.cmake  version.cmake
.github/workflows/: build.yml
.zed/: debug.json
buildscripts/cmake/: DeclareModuleSetup.cmake
share/: CMakeLists.txt
share/locales/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  README.md  app.qrc  application.cpp  application.h  cmdoptions.h  commandlineparser.cpp  commandlineparser.h  main.cpp
src/app/configs/: workspaces.cfg
src/appshell/: CMakeLists.txt  README.md  appshell.qrc  appshellmodule.cpp  appshellmodule.h
src/appshell/qml/: AppWindow.qml  Main.qml
src/appshell/qml/TitleBar/: AppMenuBar.qml  AppSystemButtons.qml  AppTitlebar.qml
src/appshell/view/: appmenumodel.cpp  appmenumodel.h  mainwindowtitleprovider.cpp  mainwindowtitleprovider.h
src/appshell/view/internal/: iappmenumodelhook.h
src/context/: CMakeLists.txt  README.md  contextmodule.cpp  iglobalcontext.h
src/context/internal/: globalcontext.cpp  globalcontext.h  uicontextresolver.cpp  uicontextresolver.h
